--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,13 @@
+#exposed port
 SERVER_PORT=3000
+
+#environment
+NODE_ENV=development
+
+#DB connection
+DB_NAME=videos
+DB_ROOT_USER=postgres
+DB_ROOT_PASSWORD=123
+DB_PORT=5432
+DB_HOST=localhost
+DB_DRIVER=postgres
