--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Platform to show videos",
   "main": "src/app.ts",
   "scripts": {
-    "start": "nodemon src/app.ts",
-    "build": "tsc",
-    "lint": "eslint . --ext .ts"
+    "start:dev": "nodemon src/app.ts",
+    "start:prod:": "node dist/app.js",
+    "build:dev": "npx sequelize-cli init && tsc",
+    "build:prod": "tsc",
+    "lint": "eslint . --ext .ts",
+    "migrate": " tsc && npx sequelize-cli db:migrate",
+    "seed": "tsc && npx sequelize-cli db:seed:all"
   },
   "repository": {
     "type": "git",
@@ -26,12 +30,17 @@
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
     "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.9.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.28.0",
+    "sequelize-typescript": "^2.1.5"
   }
 }
