--- a/Back/.env.example
+++ b/Back/.env.example
@@ -8,6 +8,15 @@ NODE_ENV=development
 DB_NAME=videos
 DB_ROOT_USER=postgres
 DB_ROOT_PASSWORD=123
-DB_PORT=5432
+DB_PORT=5435
 DB_HOST=localhost
 DB_DRIVER=postgres
+
+#password encryption
+SALT_ROUNDS=10
+
+#JWT secret
+JWT_SECRET=fk{s4~vWQ?5S4^JwNiC4s0URce*
+
+#URL where the back is located
+URL=http://localhost
