--- a/Back/package.json
+++ b/Back/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start:dev": "nodemon src/app.ts",
     "start:prod:": "node dist/app.js",
-    "build:dev": "npx sequelize-cli init && tsc && npx sequelize-cli db:migrate",
-    "build:prod": "npx sequelize-cli init && tsc && npx sequelize-cli db:migrate",
+    "build:dev": "npx sequelize-cli init && tsc && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
+    "build:prod": "npx sequelize-cli init && tsc && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "lint": "eslint . --ext .ts",
     "migrate": " tsc && npx sequelize-cli db:migrate",
     "seed": "tsc && npx sequelize-cli db:seed:all"
